problem 2 and 3 added

--- a/hwk1/hwk1.tex
+++ b/hwk1/hwk1.tex
@@ -44,9 +44,9 @@ Date: 3/22/2017\\ --------------------------------------------------------------
 \begin {enumerate}
 \item Summation Practice
 				\begin {enumerate}[(a)]
-\item $$\sum_{k=3}^{n+1} 1$   %a
-					\item %b
-					\item %c
+					\item $$\sum_{k=3}^{n+1} 1$   %a
+					\item $$\sum_{i=1}^{100} (4+3i)$   %b
+					\item $$\sum_{k=3}^{n+1} 1$   %c
 					\item %d
 					\item %e
 					\item %f
