--- a/hwk1/hwk1.tex
+++ b/hwk1/hwk1.tex
@@ -60,7 +60,7 @@ Date: 3/22/2017\\ --------------------------------------------------------------
 							  $$ = \frac{200(200+1)(400+1)}{6} - 6 \left\{ \frac{200(200+1)}{2} \right\} + 9(200) $$
 								$$ = 2567900 $$
 
-					\item $$\sum_{i=10}^{80} (i^{3} + i^{2})$$
+					\item $$\sum_{i=10}^{80} (i^{3} + i^{2}) = \sum_{i=10}^{80} i^{3} + \sum_{i=10}^{80} i^{2} $$
 					\item $$\sum_{j=0}^{n-1} (j+1)$$					
 					\item Create a summation for the following sequence: 2+4+8+16+32+64
 								$$\sum_{j=0}^{n-1} (j+1)$$	
