all problems actually done now

--- a/hwk1/hwk1.tex
+++ b/hwk1/hwk1.tex
@@ -92,7 +92,9 @@ Date: 3/22/2017\\ --------------------------------------------------------------
 					\item $$\sum_{i=0}^{n-2} \sum_{j=i+1}^{n-1} 1 = \sum_{i=0}^{n-2} (-i + n -1)$$
 									$$= \frac{n(n-1)}{2} $$
 					\item polynomial: $O(n^{2})$
-
+					\item This algorithm calculates the summation of $i^{2}$ iterations of the loop to value n.
+					\item $$\sum_{i=1}^{n} i^{2} = \frac{n(n+1)(2n+1)}{6}$$
+					\item polynomial: $O(n^{3})$
 				\end {enumerate}
 \end {enumerate}
 
