python script working, hwk2 p1 progress

--- a/hwk2/hwk2.tex
+++ b/hwk2/hwk2.tex
@@ -38,11 +38,11 @@
 
 
 \begin{document}
-Homework Assignment: 1\\ 
+Homework Assignment: 2\\ 
 Name: Jonathan Gaines\\ 
-Date: 3/22/2017\\ --------------------------------------------------------------------------------------------------
+Date: 3/29/2017\\ --------------------------------------------------------------------------------------------------
 \begin {enumerate}
-\item Sorting Algorithm
+\item X Sorting Algorithm
 	\begin {enumerate}[(a)]
 		\item
 		\item
