boxes around example

--- a/hwk2/hwk2.tex
+++ b/hwk2/hwk2.tex
@@ -45,6 +45,7 @@ Date: 3/29/2017\\ --------------------------------------------------------------
 \item X Sorting Algorithm
 	\begin {enumerate}[(a)]
 		\item
+			\mbox{E}\mbox{X}\mbox{A}\mbox{M}\mbox{P}\mbox{L}\mbox{E}				
 		\item
 		\item
 	\end {enumerate}
