--- a/hwk2/hwk2.tex
+++ b/hwk2/hwk2.tex
@@ -45,7 +45,12 @@ Date: 3/29/2017\\ --------------------------------------------------------------
 \item X Sorting Algorithm
 	\begin {enumerate}[(a)]
 		\item
-			\mbox{E}\mbox{X}\mbox{A}\mbox{M}\mbox{P}\mbox{L}\mbox{E}				
+			EXAMPLE\Rightarrow 
+			AXEMPLE\Rightarrow	
+			AEXMPLE\Rightarrow
+			AEEMPLX\Rightarrow
+			AEELPMX\Rightarrow
+			AEELMPX 		
 		\item
 		\item
 	\end {enumerate}
