reformating of part a q1

--- a/hwk2/hwk2.tex
+++ b/hwk2/hwk2.tex
@@ -44,15 +44,15 @@ Date: 3/29/2017\\ --------------------------------------------------------------
 \begin {enumerate}
 \item X Sorting Algorithm
 	\begin {enumerate}[(a)]
-		\item
-			EXAMPLE\Rightarrow 
+		\item part 1
+		$$EXAMPLE\Rightarrow 
 			AXEMPLE\Rightarrow	
 			AEXMPLE\Rightarrow
 			AEEMPLX\Rightarrow
 			AEELPMX\Rightarrow
-			AEELMPX 		
-		\item
-		\item
+			AEELMPX $$		
+		\item part 2
+		\item part 3
 	\end {enumerate}
 \item Bubble Sort
 	\begin {enumerate}[(a)]
