bubble sort + iteration docs done + extra iterations

--- a/hwk2/hwk2.tex
+++ b/hwk2/hwk2.tex
@@ -60,7 +60,9 @@ Date: 3/29/2017\\ --------------------------------------------------------------
 		$$EXAMPLE\Rightarrow 
 			EAMPLEX\Rightarrow	
 			AELEMPX\Rightarrow
-			AEELMPX$$ 
+			AEELMPX$$ $$\Rightarrow
+			AEELMPX\Rightarrow
+			AEELMPX $$
 		\item
 		\item
 	\end {enumerate}
