--- a/hwk2/hwk2.tex
+++ b/hwk2/hwk2.tex
@@ -42,7 +42,7 @@ Homework Assignment: 2\\
 Name: Jonathan Gaines\\ 
 Date: 3/29/2017\\ --------------------------------------------------------------------------------------------------
 \begin {enumerate}
-\item X Sorting Algorithm
+\item XSort Algorithm
 	\begin {enumerate}[(a)]
 		\item
 		$$EXAMPLE\Rightarrow 
@@ -52,6 +52,7 @@ Date: 3/29/2017\\ --------------------------------------------------------------
 		  AEELPMX\Rightarrow
 			AEELMPX $$		
 		\item
+			Time Efficiency: $O(n^{2})$
 		\item 
 	\end {enumerate}
 \item Bubble Sort
