--- a/hwk2/hwk2.tex
+++ b/hwk2/hwk2.tex
@@ -57,6 +57,7 @@ Date: 3/29/2017\\ --------------------------------------------------------------
 			Time Efficiency: $O(n^{2})$ \\
 			Space Efficiency: 
 		\item 
+			Stability of an algorithm refers to the handling of elements of the same value. A stable algorithm will swap the elements of the same value, but this is not always necessary. An example of where this is not necessary is this sort. It would however matter if a list of last names were being sorted, with the first name being used as a secondary sorting factor. This algorithm is not stable because the only instance where two elements swap places is when A < B. \par  
 	\end {enumerate}
 \item Bubble Sort
 	\begin {enumerate}[(a)]
