--- a/hwk2/hwk2.tex
+++ b/hwk2/hwk2.tex
@@ -62,6 +62,28 @@ Date: 3/29/2017\\ --------------------------------------------------------------
 \item Bubble Sort
 	\begin {enumerate}[(a)]
 		\item
+		$$EXAMPLE\Rightarrow
+			EAXMPLE\Rightarrow
+			EAMXPLE\Rightarrow
+			EAMPXLE$$ $$\Rightarrow
+			EAMPLXE\Rightarrow
+			EAMPLEX\Rightarrow
+			AEMPLEX\Rightarrow
+			AEMPLEX$$ $$\Rightarrow
+			AEMPLEX\Rightarrow
+			AEMLPEX\Rightarrow
+			AEMLEPX\Rightarrow
+			AEMLEPX$$ $$\Rightarrow
+			AEMLEPX\Rightarrow
+			AELMEPX\Rightarrow
+			AELEMPX\Rightarrow
+			AELEMPX$$ $$\Rightarrow
+			AELEMPX\Rightarrow
+			AEELMPX\Rightarrow
+			AEELMPX\Rightarrow
+			AEELMPX$$ $$\Rightarrow
+			AEELMPX\Rightarrow
+		$$
 		\item
 			Bubble sort works by progressively swapping larger elements with smaller elements to the right. If no swaps occur during the pass through the array, then the list is sorted. \par
 		\item
