all done hopefully

--- a/hwk2/hwk2.tex
+++ b/hwk2/hwk2.tex
@@ -57,7 +57,7 @@ Date: 3/29/2017\\ --------------------------------------------------------------
 			Time Efficiency: $O(n^{2})$ \\
 			Space Efficiency: $O(1)$ 
 		\item 
-						Stability in an algorithm refers to the ordering of elements of same values in the final sorted list. A stable algorithm will keep elements of the same value in the same order as they appeared in the unordered list. This algorithm is not stable when givent the list [2, 2, 1], the first 2 element is swapped with 1 resulting in [1, 2, 2] and the original order of the equal elements is now changed. \par
+						Stability in an algorithm refers to the ordering of elements of same values in the final sorted list. A stable algorithm will keep elements of the same value in the same order as they appeared in the unordered list. This algorithm is not stable. This is shown when givent the list [2, 2, 1]; the first 2 element is swapped with 1 resulting in [1, 2, 2] and the original order of the equal elements is now changed. \par
 	\end {enumerate}
 \item Bubble Sort
 	\begin {enumerate}[(a)]
@@ -92,10 +92,13 @@ Date: 3/29/2017\\ --------------------------------------------------------------
 \item Show that $n^{2} \in O(n^{2}+10n), n \geq 0$ \\ \\
 	\tab Choose $c=1$ \\ \\
 	\tab $n^{2} \leq n^{2} + 10n$, while $n>0$ \\ \\
-	\tab because this holds true for all $c \geq 1$, $n^{2} \in O(n^{2}+10n)$
+	\tab \implies $0 \leq c10n$ \\ \\ 
+	\tab because this holds true, $n^{2} \in O(n^{2}+10n)$
 \item Show that $n \not\in \Omega(n^{2})$ \\ \\
-	\tab Choose $c=1$ \\ \\
-	\tab Because $n \not\geq n^{2}$, $n \not\in \Omega(n^{2})$ for all $c \geq 1$
+	\tab if $f(n) \in \Omega(g(n))$, then $f(n) \geq cg(n)$ \\ \\
+	\tab \implies $n \geq cn^{2}$, while $c>0$ \\ \\
+	\tab \implies $1 \geq cn$ \implies $n\leq\frac{1}{c}$ \\ \\
+	\tab because $n>\frac{1}{c}$, then $n \not\in \Omega(n^{2})$
 \end {enumerate}
 
 \end{document}
