all done for real

--- a/hwk2/hwk2.tex
+++ b/hwk2/hwk2.tex
@@ -82,7 +82,7 @@ Date: 3/29/2017\\ --------------------------------------------------------------
 			AEELMPX\Rightarrow
 			AEELMPX\Rightarrow
 			AEELMPX$$ $$\Rightarrow
-			AEELMPX\Rightarrow
+			AEELMPX
 		$$
 		\item
 			Bubble sort works by progressively swapping larger elements with smaller elements to the right. If no swaps occur during the pass through the array, then the list is sorted. \par
