--- a/prj1/exec_summary.tex
+++ b/prj1/exec_summary.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{article}
+\documentclass[12pt, tikz]{article}
 
 \usepackage[dvips]{graphics,color} 
 \usepackage{amsfonts} 
@@ -14,20 +14,10 @@
 \setlength{\evensidemargin}{0pc} 
 \setlength{\textwidth}{6.5in}
 
-\newcommand{\answer}[2]{ \newpage \noindent \framebox{
-	\vbox{
-		Executive Summary\hfill {\bf \problemset}
-% 		\hfill \# #1 \\
-			\name \hfill \today \\ 
-%        Collaborators: #2
-	}
-} 
-\bigskip
-}
 
 
 \begin{document}
-Executive Summary: Project 1\\ 
+Executive Summary\\ 
 Name: Jonathan Gaines\\ 
 Date: 4/12/2017\\ --------------------------------------------------------------------------------------------------
 
