--- a/prj1/exec_summary.tex
+++ b/prj1/exec_summary.tex
@@ -6,6 +6,9 @@
 \usepackage{amsmath} 
 \usepackage{latexsym} 
 \usepackage{enumerate} 
+\usepackage{pdfplots}
+\pdfplotsset{compat=1.10}
+\pdfplotstableread[col sep = comma]{data.csv}\mydata
 \setlength{\parskip}{1pc} 
 \setlength{\parindent}{0pt} 
 \setlength{\topmargin}{-3pc} 
@@ -19,8 +22,17 @@
 \begin{document}
 Executive Summary\\ 
 Name: Jonathan Gaines\\ 
-Date: 4/12/2017\\ --------------------------------------------------------------------------------------------------
-
+Date: 4/12/2017\\ -----------------------------------------------------------------------------------------------
+\begin{tikzpicture}
+				\begin{axis}[
+								legend pos = north west,
+								xmin = 0, xmax = 100000,
+								ymin = 0, ymax = 370,
+								]
+								\addplot table[x index={0}, y index{2}]
+								\legend{Actual}
+				\end{axis}
+\end{tikzpicture}
 
 
 
