--- a/prj1/exec_summary.tex
+++ b/prj1/exec_summary.tex
@@ -7,8 +7,6 @@
 \usepackage{latexsym} 
 \usepackage{enumerate} 
 \usepackage{pgfplots}
-\pgfplotsset{compat=1.10}
-\pgfplotstableread[col sep = comma]{data.csv}\mydata
 \setlength{\parskip}{1pc} 
 \setlength{\parindent}{0pt} 
 \setlength{\topmargin}{-3pc} 
@@ -22,16 +20,14 @@
 \begin{document}
 Executive Summary\\ 
 Name: Jonathan Gaines\\ 
-Date: 4/12/2017\\ -----------------------------------------------------------------------------------------------
+Date: 4/12/2017\\ ----------------------------------------------------------------------------------------------
 \begin{tikzpicture}
-				\begin{axis}[
-								legend pos = north west,
-								xmin = 0, xmax = 100000,
-								ymin = 0, ymax = 370,
-								]
-								\addplot table[x index={0}, y index{2}]
-								\legend{Actual}
-				\end{axis}
+  \begin{axis}[ 
+		xlabel=$x$	
+		ylabel={$f(x) = x^2 - x +4$}
+		] 
+	\addplot {x^2 - x +4}; 
+ \end{axis}
 \end{tikzpicture}
 
 
