1b and table changes

--- a/hwk3/hwk3.tex
+++ b/hwk3/hwk3.tex
@@ -50,12 +50,14 @@ Date: 4/19/2017\\ --------------------------------------------------------------
 			\begin{tabular}{ c | c | c | c }
 					 Solution & Time Slot 1 & Time Slot 2 & profit \\
 									1 & Job 1 			& Job 3				& 55 \\
-									2 & Job 2 			& Job 1				& 65 \\
-									3 & Job 2 			& Job 3				& 60 \\
-									4 & Job 4				& Job 1				& 70 \\
-									5 & Job 4				& Job 3				& 65
+									2 & Job 3				& Job 1				& 55 \\
+									3 & Job 2 			& Job 1				& 65 \\
+									4 & Job 2 			& Job 3				& 60 \\
+									5 & Job 4				& Job 1				& 70 \\
+									6 & Job 4				& Job 3				& 65
 			\end{tabular}
 		\item
+			The optimal schedule has Job 4 in timeslot 1 and Job 1 in timeslot 2. \par
 		\item
 	\end {enumerate}
 \item Dynamic Programming: Change Making
