--- a/hwk3/hwk3.tex
+++ b/hwk3/hwk3.tex
@@ -41,7 +41,7 @@
 
 \begin{document}
 Homework Assignment: 3\\ 
-Name: Jonathan Gaines\\ 
+Name:--- Jonathan Gaines\\ 
 Date: 4/19/2017\\ --------------------------------------------------------------------------------------------------
 \begin {enumerate}
 \item Job Optimization
@@ -77,6 +77,7 @@ Date: 4/19/2017\\ --------------------------------------------------------------
 							$f(n)$	& 0	& 1 & 2 & 1 & 2 & 1 & 2 & 3 & 2 & 3
 			\end{tabular}
 		\item
+			\begin 
 	\end {enumerate}
 \item Dyanmic Programming: Knapsack Problem
 	\begin {enumerate}[(a)]
