--- a/hwk3/hwk3.tex
+++ b/hwk3/hwk3.tex
@@ -41,7 +41,7 @@
 
 \begin{document}
 Homework Assignment: 3\\ 
-Name:--- Jonathan Gaines\\ 
+Name: Jonathan Gaines\\ 
 Date: 4/19/2017\\ --------------------------------------------------------------------------------------------------
 \begin {enumerate}
 \item Job Optimization
@@ -72,7 +72,7 @@ Date: 4/19/2017\\ --------------------------------------------------------------
 		\item
 			Minimum coin combinations include \{1, 2, 5\} and \{3, 3, 3\}
 		\item
-			\begin{tabular}{c | c | c | c | c | c | c | c | c | c | c}
+			\begin{tabular}{c | c | c | c | c | c | c | c | c | c | c |}
 										n & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 \\
 							$f(n)$	& 0	& 1 & 2 & 1 & 2 & 1 & 2 & 3 & 2 & 3
 			\end{tabular}
