--- a/hwk3/hwk3.tex
+++ b/hwk3/hwk3.tex
@@ -17,6 +17,8 @@
 \usepackage{amsmath} 
 \usepackage{latexsym} 
 \usepackage{enumerate} 
+\usepackage{algorithm}
+\usepackage{algorithmic}
 \setlength{\parskip}{1pc} 
 \setlength{\parindent}{0pt} 
 \setlength{\topmargin}{-3pc} 
@@ -77,6 +79,12 @@ Date: 4/19/2017\\ --------------------------------------------------------------
 							$f(n)$	& 0	& 1 & 2 & 1 & 2 & 1 & 2 & 3 & 2 & 3
 			\end{tabular}
 		\item
+			\begin{algorithm}
+				\caption{Change Making Pseudocode}
+				\begin{algorithmic}
+					
+				\end{algorithmic}
+			\end{algorithm}
 	\end {enumerate}
 \item Dyanmic Programming: Knapsack Problem
 	\begin {enumerate}[(a)]
