--- a/hwk3/hwk3.tex
+++ b/hwk3/hwk3.tex
@@ -82,6 +82,7 @@ Date: 4/19/2017\\ --------------------------------------------------------------
 			\begin{algorithm}
 				\caption{Change Making Pseudocode}
 				\begin{algorithmic}
+					\STATE change-making(D[1, 3, 5], 9)
 					
 				\end{algorithmic}
 			\end{algorithm}
