--- a/hwk3/hwk3.tex
+++ b/hwk3/hwk3.tex
@@ -114,7 +114,9 @@ Date: 4/19/2017\\ --------------------------------------------------------------
 	\begin {enumerate}[(a)]
 		\item
 		\item
+			10000110111
 		\item
+			BADFAD
 	\end {enumerate}
 \end {enumerate}
 
