--- a/hwk3/hwk3.tex
+++ b/hwk3/hwk3.tex
@@ -18,7 +18,7 @@
 \usepackage{latexsym} 
 \usepackage{enumerate} 
 \usepackage{multirow}
-\usepackage{forest}
+\usepackage{graphicx}
 \setlength{\parskip}{1pc} 
 \setlength{\parindent}{0pt} 
 \setlength{\topmargin}{-3pc} 
@@ -26,6 +26,8 @@
 \setlength{\oddsidemargin}{0pc} 
 \setlength{\evensidemargin}{0pc} 
 \setlength{\textwidth}{6.5in}
+
+\graphicspath{{imgs/}}
 
 \newcommand{\answer}[2]{ \newpage \noindent \framebox{
 	\vbox{
@@ -123,13 +125,7 @@ Date: 4/19/2017\\ --------------------------------------------------------------
 \item Greedy Algorithm
 	\begin {enumerate}[(a)]
 		\item
-			\begin{forest}
-				[42, nice empty nodes,
-					[17 , zero,
-						[B(8), zero]
-						[A(9), one]]
-					[ , one]]
-			\end{forest}
+				\includegraphics{huff-tree.jpg}
 		\item
 			10000110111
 		\item
